# opencv_contrib

modules/wechat_qbar/: CMakeLists.txt
modules/wechat_qbar/cmake/: FindOpenCV.cmake  QBarUtils.cmake
modules/wechat_qbar/demos/cmd/: CMakeLists.txt  main.cpp  stb_image.h
modules/wechat_qbar/demos/ios/: init.sh
modules/wechat_qbar/demos/ios/demo/: AppDelegate.h  AppDelegate.m  CameraViewController.h  CameraViewController.m  DetectedObject.h  DetectedObject.m  Image.h  Image.m  Info.plist  PreviewViewController.h  PreviewViewController.m  QBarSDK.h  QBarSDK.mm  RootViewController.h  RootViewController.m  SceneDelegate.h  SceneDelegate.m  main.m
modules/wechat_qbar/demos/ios/demo.xcodeproj/: project.pbxproj
modules/wechat_qbar/demos/ios/demo/Base.lproj/: Main.storyboard
modules/wechat_qbar/include/opencv2/: QBarLib.h  QBarStruct.h  wechat_qbar.hpp
modules/wechat_qbar/samples/: demo.py  main.cpp
modules/wechat_qbar/samples/models/: model.yml
modules/wechat_qbar/samples/models/detector/: qbar_det.onnx  qbar_det.yml
modules/wechat_qbar/samples/models/seg/: barcode_seg.onnx  qbar_seg.yml
modules/wechat_qbar/samples/models/sr/: qbar_sr.onnx  qbar_sr.yml
modules/wechat_qbar/scripts/: build_linux.sh  build_macos.sh
modules/wechat_qbar/src/: BinarizerMgr.cpp  BinarizerMgr.h  BinarizerMgr.hpp  CMakeLists.txt  QBarDecoder.cpp  QBarDecoder.h  QBarDecoder.hpp  QBarEncoder.cpp  QBarEncoder.h  QBarEncoder.hpp  QBarImportOpenCV.h  QBarInfoFilter.cpp  QBarInfoFilter.hpp  QBarLib.cpp  QBarSource.cpp  QBarSource.h  QBarSource.hpp  binarzermgr.cpp  binarzermgr.hpp  qbardecoder.cpp  qbardecoder.hpp  qbarencoder.cpp  qbarencoder.hpp  qbarinfofilter.cpp  qbarinfofilter.hpp  qbarsource.cpp  qbarsource.hpp  qbarstruct.hpp  wechat_qbar.cpp
modules/wechat_qbar/src/bigint/: BigInteger.cc  BigInteger.cpp  BigInteger.hh  BigInteger.hpp  BigIntegerAlgorithms.cc  BigIntegerAlgorithms.cpp  BigIntegerUtils.cc  BigIntegerUtils.cpp  BigUnsigned.cc  BigUnsigned.cpp  BigUnsigned.hh  BigUnsigned.hpp  BigUnsignedInABase.cc  BigUnsignedInABase.cpp  ChangeLog  README
modules/wechat_qbar/src/detector/: align.cpp  align.hpp  qbar_detector.cpp  qbar_detector.hpp
modules/wechat_qbar/src/sr_scale/: super_scale.cpp  super_scale.hpp
modules/wechat_qbar/src/tscan/: debug_info.cpp  debug_info.h  result.cpp  result.h
modules/wechat_qbar/src/tscan/comm/: tscan_string.cpp  tscan_string.h  tscan_time.cpp  tscan_time.h
modules/wechat_qbar/src/tscan/comm/tools/: debug_log.cpp  debug_log.h
modules/wechat_qbar/src/zxing/: BarcodeFormat.cpp  BarcodeFormat.h  Binarizer.cpp  Binarizer.h  Binarizer.hpp  BinaryBitmap.cpp  BinaryBitmap.h  BinaryBitmap.hpp  ChecksumException.cpp  ChecksumException.h  ChecksumException.hpp  DecodeHints.cpp  DecodeHints.h  DecodeHints.hpp  ErrorHandler.cpp  ErrorHandler.h  Exception.cpp  Exception.h  FormatException.cpp  FormatException.h  FormatException.hpp  IllegalStateException.h  IllegalStateException.hpp  InvertedLuminanceSource.cpp  InvertedLuminanceSource.h  InvertedLuminanceSource.hpp  LuminanceSource.cpp  LuminanceSource.h  LuminanceSource.hpp  MultiFormatReader.cpp  MultiFormatReader.h  MultiFormatReader.hpp  NotFoundException.h  NotFoundException.hpp  Reader.cpp  Reader.h  Reader.hpp  ReaderException.h  ReaderException.hpp  Result.cpp  (+39 more)
modules/wechat_qbar/src/zxing/common/: Array.h  Array.hpp  BitArray.cpp  BitArray.h  BitArray.hpp  BitArrayIO.cpp  BitMatrix.cpp  BitMatrix.h  BitMatrix.hpp  BitSource.cpp  BitSource.h  BitSource.hpp  ByteMatix.h  ByteMatix.hpp  ByteMatrix.cpp  ByteMatrix.h  ByteMatrix.hpp  Character.h  CharacterSetECI.cpp  CharacterSetECI.h  CharacterSetECI.hpp  Compress.cpp  DecoderResult.cpp  DecoderResult.h  DecoderResult.hpp  DetectorResult.cpp  DetectorResult.h  DetectorResult.hpp  FastWindowBinarizer.cpp  FastWindowBinarizer.h  FastWindowBinarizer.hpp  GlobalHistogramBinarizer.cpp  GlobalHistogramBinarizer.h  GlobalHistogramBinarizer.hpp  GreyscaleLuminanceSource.cpp  GreyscaleLuminanceSource.h  GreyscaleLuminanceSource.hpp  GreyscaleRotatedLuminanceSource.cpp  GreyscaleRotatedLuminanceSource.h  GreyscaleRotatedLuminanceSource.hpp  (+77 more)
modules/wechat_qbar/src/zxing/common/detector/: MonochromeRectangleDetector.cpp  MonochromeRectangleDetector.h  MonochromeRectangleDetector.hpp  WhiteRectangleDetector.cpp  WhiteRectangleDetector.h  WhiteRectangleDetector.hpp  monochrome_rectangle_detector.cpp  monochrome_rectangle_detector.hpp  white_rectangle_detector.cpp  white_rectangle_detector.hpp
modules/wechat_qbar/src/zxing/datamatrix/: DataMatrixReader.cpp  DataMatrixReader.h  DataMatrixReader.hpp  Version.cpp  Version.h  Version.hpp  data_matrix_reader.cpp  data_matrix_reader.hpp  version.cpp
modules/wechat_qbar/src/zxing/oned/: CodaBarReader.cpp  CodaBarReader.h  CodaBarReader.hpp  CodaBarWriter.cpp  CodaBarWriter.h  CodaBarWriter.hpp  Code128Reader.cpp  Code128Reader.h  Code128Reader.hpp  Code128Writer.cpp  Code128Writer.h  Code128Writer.hpp  Code25Reader.cpp  Code25Reader.h  Code25Reader.hpp  Code39Reader.cpp  Code39Reader.h  Code39Reader.hpp  Code39Writer.cpp  Code39Writer.h  Code39Writer.hpp  Code93Reader.cpp  Code93Reader.h  Code93Reader.hpp  EAN13Reader.cpp  EAN13Reader.h  EAN13Reader.hpp  EAN13Writer.cpp  EAN13Writer.h  EAN13Writer.hpp  EAN8Reader.cpp  EAN8Reader.h  EAN8Reader.hpp  EAN8Writer.cpp  EAN8Writer.h  EAN8Writer.hpp  ITFReader.cpp  ITFReader.h  ITFReader.hpp  ITFWriter.cpp  (+64 more)
modules/wechat_qbar/src/zxing/pdf417/: PDF417Reader.cpp  PDF417Reader.h  PDF417Reader.hpp  pdf417reader.cpp  static_var
modules/wechat_qbar/src/zxing/qrcode/: ErrorCorrectionLevel.cpp  ErrorCorrectionLevel.h  ErrorCorrectionLevel.hpp  FormatInformation.cpp  FormatInformation.h  FormatInformation.hpp  QRCodeReader.cpp  QRCodeReader.h  QRCodeReader.hpp  QRCodeWriter.cpp  QRCodeWriter.h  QRCodeWriter.hpp  Version.cpp  Version.h  Version.hpp  error_correction_level.cpp  error_correction_level.hpp  format_information.cpp  format_information.hpp  qrcode_reader.cpp  qrcode_reader.hpp  qrcode_writer.cpp  qrcode_writer.hpp  static_var
(+194 files in other folders)
